--- a/package.json
+++ b/package.json
@@ -1,28 +1,56 @@
 {
-  "name": "electron-updater-example",
-  "version": "0.7.1",
-  "main": "main.js",
-  "description": "electron-updater example project",
-  "author": "Matt Haggard",
-  "scripts": {
-    "publish": "build -p always"
-  },
-  "devDependencies": {
-    "electron": "^3.0.2",
-    "electron-builder": "^20.28.4"
-  },
-  "dependencies": {
-    "electron-log": "^1.3.0",
-    "electron-updater": "^4.0.6"
-  },
-  "build": {
-    "appId": "com.github.iffy.electronupdaterexample",
-    "mac": {
-      "category": "your.app.category.type",
-      "target": [
-        "zip",
-        "dmg"
-      ]
-    }
-  }
+	"name": "electron-updater-example",
+	"version": "0.7.5",
+	"main": "main.js",
+	"description": "electron-updater example project",
+	"author": "Shawn Yao",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/shwnyao/electron-updater-example.git"
+	},
+	"scripts": {
+		"pack": "CSC_LINK='./dev_cert.p12' CSC_KEY_PASSWORD='electron' electron-builder build --publish never",
+		"pub": "CSC_LINK='./dev_cert.p12' CSC_KEY_PASSWORD='electron' electron-builder build --publish always"
+	},
+	"devDependencies": {
+		"electron": "^3.0.2",
+		"electron-builder": "^22.11.7"
+	},
+	"dependencies": {
+		"electron-log": "^1.3.0",
+		"electron-updater": "^4.0.6"
+	},
+	"build": {
+		"publish": [
+			{
+				"provider": "github",
+				"owner": "shwnyao",
+				"repo": "electron-updater-example"
+			}
+		],
+		"appId": "com.github.shwnyao.electronupdaterexample",
+		"mac": {
+			"category": "your.app.category.type",
+			"target": [
+				"dmg"
+			],
+			"hardenedRuntime": true,
+			"entitlements": "assets/entitlements.mac.plist",
+			"entitlementsInherit": "assets/entitlements.mac.plist"
+		},
+		"dmg": {
+			"contents": [
+				{
+					"x": 130,
+					"y": 220
+				},
+				{
+					"x": 410,
+					"y": 220,
+					"type": "link",
+					"path": "/Applications"
+				}
+			]
+		}
+	}
 }
